--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "keywords": [
     "whatsapp-bot-ai"
   ],
-  "author": "@rifza.p.p",
+  "author": "@wbagazk",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/wbagazk/WBKBot-MD/issues"
