--- a/toolkit/set/configg.json
+++ b/toolkit/set/configg.json
@@ -81,6 +81,10 @@
       "xterm": {
         "key": "Bell409",
         "url": "https://aihub.xtermai.xyz"
+      },
+      "bfl": {
+        "key": "HC-SggAzlXDqGtlJQC",
+        "url": "https://beforelife.my.id"
       }
     }
   }
