Fix & Add Domain .it & Update Interactive

--- a/toolkit/set/config.json
+++ b/toolkit/set/config.json
@@ -1,3 +1,14 @@
+/*//////////////////////////////////////////////
+DEVELOPED BY @WBAGAZK
+Github : https://github.com/wbagazk/
+All Social Media : @wbagazk
+
+BASE Rifza123
+Github : https://github.com/Rifza123
+
+PLEASE, DO NOT DELETE THIS CREDIT, RESPECT IT!!!
+//////////////////////////////////////////////*/
+
 {
   "owner": [
     "6282131282262@s.whatsapp.net"
